resources/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foundry
  namespace: foundry
  labels:
    app: foundry
spec:
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
      - name: foundry
        image: foundry
        imagePullPolicy: IfNotPresent
        ports:
        - name: foundry
          containerPort: 30000
        volumeMounts:
        - name: foundry
          mountPath: /data
        resources:
          limits:
            memory: 4Gi
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: foundry
        persistentVolumeClaim:
          claimName: foundry
