resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
  namespace: foundry
  labels:
    app: foundry
spec:
  type: ClusterIP
  ports:
    - port: 30000
      targetPort: foundry
  selector:
    app: foundry
