resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: foundry
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vtt.crt.lol
    external-dns.alpha.kubernetes.io/target: vtt.crt.lol
spec:
  ingressClassName: nginx-external
  rules:
    - host: "vtt.crt.lol"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: foundry
                port:
                  number: 30000
  tls:
    - hosts:
      - vtt.crt.lol
